feat: implement first working version of the script

--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "github-app-installation-token",
   "version": "1.0.0",
   "description": "Dockerized CLI tool that retrieves a GitHub App installation token, given the App's ID and private key",
-  "main": "bin/index.js",
-  "bin": {
-    "github-app-installation-token": "./bin/index.js"
-  },
+  "main": "index.js",
   "repository": "https://github.com/MShekow/github-app-installation-token",
   "author": "Marius Shekow",
   "license": "MIT",
